# No-Lag

./: .gitignore  CHANGELOG.md  LICENSE  README.md  beet.yaml  changelog.md  changelog.txt  config.json  pack.mcmeta  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: lint.yml  release.yml  test.yml
data/2mal3/advancements/: nola.json
data/2mal3/advancements/nola/: first_join.json
data/2mal3/functions/nola/: get_variables.mcfunction  ignore.mcfunction  ignore_kill.mcfunction
data/2mal3/predicates/nola/: have_item.json  iron_golem_player_created.json  is_day.json  used.json
data/global/advancements/: 2mal3.json  nld.json  no_lag.json  root.json
data/load/tags/functions/: load.json
data/main/advancements/: no_lag.json  root.json
data/minecraft/tags/functions/: load.json  tick.json
data/nld/functions/: clear_team.mcfunction  config.mcfunction  max_entitys.mcfunction  max_tnt.mcfunction  xp_combine.mcfunction
data/nld/functions/clear_lag/: clear_lag.mcfunction  init.mcfunction  main.mcfunction  (+1 more)
data/nld/predicates/: ignore.json
datapack/: config.json  pack.mcmeta
datapack/.mcproject/: PROJECT.json
datapack/macros/: log.mcm
datapack/src/: global.mc  nola.mc
datapack/src/nola/: core.mc  menu.mc
macros/: log.mcm
plugins/: installation_advancement.py  remove_empty_functions.py
src/: global.mc  nola.mc  version-proxy2.mc
src/nola/: core.mc  menu.mc
src/nola/modues/: item_despawn.mc
src/nola/modules/: anti_tnt_spam.mc  item_despawn.mc  lag_clear.mc  no_ai.mc  no_collision.mc  tps_test.mc  xp_merge.mc
(+132 files in other folders)
